# egui_term

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
egui_term/: Cargo.toml
egui_term/src/: bindings.rs  lib.rs  types.rs  view.rs
egui_term/src/backend/: mod.rs
examples/: Cargo.toml  custom_bindings.rs  dock.rs  fonts.rs  full_screen.rs  tabs.rs  themes.rs
examples/custom_bindings/: Cargo.toml
examples/custom_bindings/src/: app.rs  main.rs
examples/dock/: Cargo.toml
examples/dock/src/: app.rs  main.rs
examples/fonts/: Cargo.toml
examples/fonts/src/: app.rs  main.rs
examples/full_screen/: Cargo.toml  README.md
examples/full_screen/src/: app.rs  main.rs
examples/split_view/: Cargo.toml  README.md
examples/split_view/src/: app.rs  main.rs
examples/tabs/: Cargo.toml  README.md  input_link
examples/tabs/src/: app.rs  main.rs
examples/themes/: Cargo.toml
examples/themes/src/: app.rs  main.rs
notes/: ALTERNATE_SCROLL.md
src/: actions.rs  bindings.rs  font.rs  lib.rs  theme.rs  types.rs  utils.rs  view.rs
src/backend/: mod.rs  settings.rs
