[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui", "terminal", "tty", "shell"]
license = "MIT"

[dependencies]
egui = "0.31.0"
alacritty_terminal = "0.25.0"
anyhow = "1.0.96"
open = "5.3.2"
