[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui"]
license = "MIT"

[dependencies]
egui = "0.33"
alacritty_terminal = "0.25.1"
anyhow = "1.0.96"
open = "5.3.2"
