[workspace]
members = ["examples/*"]

# dependencies that are shared throughout the workspace (mostly for examples)
[workspace.dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
env_logger = "0.11.6"
log = "0.4"
wgpu = "27" # enables the wgpu default features so we get the default backends

[package]
name = "egui_term"
description = "Terminal emulator widget powered by EGUI framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Harzu/egui_term"
categories = ["gui"]
license = "MIT"

[dependencies]
egui = { workspace = true }
alacritty_terminal = "0.25.1"
anyhow = "1.0.100"
open = "5.3.2"
