[package]
name = "dock"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
egui_dock = "0.14"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_term = { path = "../../" }
winit = "0.30"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"