[package]
name = "full_screen"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
log = { workspace = true }
egui_term = { path = "../../" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[features]
default = []
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
