[package]
name = "split_view"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { workspace = true }
egui_dock = "0.18.0"
eframe = { workspace = true }
log = { workspace = true }
egui_term = { path = "../../" }
winit = "0.30"
wgpu = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[features]
default = []
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
