[package]
name = "tabs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
log = { workspace = true }
egui_term = { path = "../../" }
wgpu = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[features]
default = []
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
